# VOXIRA-Farm-Game

./: .gitignore  CMakeLists.txt  README.md  build_reset_tool.bat
Tutorial/: Items.md  biomes.md  camera.md  dimension.md  functions.md  heightmap.md  house.md  hud.md  objects.md  particles.md  player.md  sounds.md  ui.md  worldgen.md
assets/json/: config.json  sounds.json
assets/json/Map/: generation.json  ground.json  world.json
assets/json/Map/dimensions/: house_interior.json
assets/json/clothing/: bodies.json  hair.json  pants.json  shirts.json
assets/json/player/: player.json
npcs/: npc_ext_vars.h  npc_settings.cpp
player/: player_ext_methods.h  player_ext_vars.h
src/: Buildings.cpp  Buildings.h  Cam.cpp  Cam.h  ChunkManager.cpp  ChunkManager.h  Dimension.cpp  Dimension.h  HUD.cpp  HUD.h  Item api.h  Items.cpp  Items.h  Mouse tile.h  NPC.cpp  NPC.h  Object.cpp  Object.h  Particles.cpp  Particles.h  SoundSystem.cpp  SoundSystem.h  UI.cpp  UI.h  WorldGen.cpp  WorldGen.h  building_api.h  cam_api.h  clothing.cpp  clothing.h  dimension_api.h  direction.h  ground.cpp  ground.h  hud_api.h  inventar.cpp  inventory.h  item_base.h  main.cpp  map.cpp  (+9 more)
tools/: reset_world.cpp
